--- a/_config.yml
+++ b/_config.yml
@@ -1,38 +1,41 @@
-analytics:
-  google:
-    id: UA-100531691-1
-  piwik:
-    site_id: 1
-    api:
-      url: https://vps.irockbunny.com/analytics/?callback=?
-      token: 49060c859f85fcb74f80c751d233bcf3
-
-repository: BYR-Navi/BYR-Navi
-repository_url: https://github.com/BYR-Navi/BYR-Navi
-
+repository: acusp/AC-Navi
+repository_url: https://github.com/acusp/AC-Navi
 timezone: Asia/Shanghai
 lang: zh_CN
 
-title: 北邮人导航 · BYR-Navi
-alias: 北邮人导航
-description: A Navigation Website for BYR
-keywords: 北邮人导航, BYR-Navi, BYR, BUPT, Navi, Navigation
-url: http://byr-navi.com
 
-author: iROCKBUNNY
-author_url: http://irockbunny.com
-organization: TEELAB
-organization_url: http://teelab.net
-contact: contact[at]irockbunny[dot]com
+title: 歧点导航 · AC-Navi
+alias: 歧点导航
+description: A Navigation Website for acusp.info
+keywords: 歧点导航, AC-Navi acusp, Navi, Navigation
+url: https://navi.acusp.info
+
+
+author: acusp
+author_url: https://acusp.info
+organization:
+organization_url:
+contact: acusp.xu[at]gmail.com[dot]com
+
 
 image: /images/logo.png
 logo: /images/logo.png
 logo_dark: /images/logo-dark.png
 logo_white: /images/logo-white.png
 
+
+# Analytics settings
+# Baidu Analytics
+ba_track_id: ce472038c53a64826054bafc870d2d24
+# Google Analytics
+ga_track_id: 'UA-96564187-1'
+ga_domain: acusp.info
+
+
 plugins:
 - jekyll-seo-tag
 - jekyll-sitemap
+
 
 exclude:
 - .gitignore
