--- a/_data/security_links.yml
+++ b/_data/security_links.yml
@@ -1,6 +1,6 @@
-- section: public
+- section: CTF
   categories:
-  - category: 购物
+  - category: community
     links:
     - name: 京东
       style: basic
