--- a/_data/home_links.yml
+++ b/_data/home_links.yml
@@ -57,6 +57,10 @@
       icon: info circle yellow
       url: http://www.iconfont.cn/
 
+    - name: gitzip - github目录下载
+      style: basic
+      url: http://kinolien.github.io/gitzip/
+
     - name: QQ邮箱
       icon: qq black
       style: basic
