Update tool links

--- a/_data/tool_links.yml
+++ b/_data/tool_links.yml
@@ -118,6 +118,9 @@
   categories:
   - category: 资源搜索
     links:
+    - name: Free e-Books Download
+      style: basic
+      url: https://smtebooks.com/
     - name: IMDB - 电影数据库
       style: basic
       url: http://www.imdb.com/
