--- a/_data/home_links.yml
+++ b/_data/home_links.yml
@@ -233,6 +233,10 @@
       icon: music
       url: http://music.163.com/
 
+    - name: 智能电视
+      style: basic
+      url: https://www.znds.com/
+
 
   # - category: 求职
   #   links:
