Add Medium link

--- a/_data/home_links.yml
+++ b/_data/home_links.yml
@@ -134,6 +134,10 @@
       style: blue
       url: http://www.zhihu.com/
 
+    - name: Medium
+      style: blue
+      url: https://medium.com/
+
     - name: Stack Overflow
       icon: stack overflow orange
       style: basic
