--- a/_data/home_links.yml
+++ b/_data/home_links.yml
@@ -65,6 +65,10 @@
       icon: info circle yellow
       url: http://www.iconfont.cn/
 
+    - name: asciiflow
+      style: basic
+      url: http://asciiflow.com/
+
     - name: gitzip - github目录下载
       style: basic
       url: http://kinolien.github.io/gitzip/
