--- a/_data/security_links.yml
+++ b/_data/security_links.yml
@@ -47,6 +47,15 @@
       url: http://bobao.360.cn/ctf/index
 
 
+- section: Hack
+  categories:
+  - category: 会议
+    links:
+    - name: CCC
+      style: basic
+      url: https://media.ccc.de/
+
+
 
 - section: BLOG
   categories:
