--- a/_data/security_links.yml
+++ b/_data/security_links.yml
@@ -60,3 +60,7 @@
     - name: 温酒送诗人
       style: basic
       url: http://www.51xkx.cn/
+
+    - name: 编码美丽
+      style: basic
+      url: http://www.wjdiankong.cn/
