--- a/_data/home_links.yml
+++ b/_data/home_links.yml
@@ -211,9 +211,9 @@
       style: basic
       url: http://www.acfun.tv/
 
-    - name: 面包网
+    - name: 胖子视频
       style: basic
-      url: https://www.mianbao99.com/
+      url: http://www.pangzitv.com/
 
     - name: 虾米
       style: basic
