Add some search tools

--- a/_data/home_links.yml
+++ b/_data/home_links.yml
@@ -16,7 +16,7 @@
 
     - name: 当当
       style: basic
-      url: https://www.dangdang.com/
+      url: http://www.dangdang.com/
 
     - name: China-pub
       style: basic
