Add some recite assistant

--- a/_data/home_links.yml
+++ b/_data/home_links.yml
@@ -94,6 +94,10 @@
       style: basic
       url: http://xsldh.com/
 
+    - name: 背个X啊
+      style: basic
+      url: https://acusp.info/recite-assistant/
+
 
   - category: 社交
     links:
