--- a/_data/program_links.yml
+++ b/_data/program_links.yml
@@ -10,7 +10,7 @@
     links:
     - name: LeetCode
       style: basic
-      url: https://leetcode.com/
+      url: https://leetcode-cn.com/
 
     - name: LintCode
       style: basic
