--- a/_data/program_links.yml
+++ b/_data/program_links.yml
@@ -18,7 +18,7 @@
 
     - name: 九章算法
       style: basic
-      rul: http://www.jiuzhang.com/solution/
+      url: http://www.jiuzhang.com/solution/
 
     - name: HackerRank
       style: basic
