Update some links

--- a/_data/home_links.yml
+++ b/_data/home_links.yml
@@ -28,6 +28,10 @@
       style: basic
       url: https://www.amazon.cn/
 
+    - name: PayPal
+      style: basic
+      rul: https://www.paypal.com/c2/webapps/mpp/home
+
     - name: Apple
       style: basic
       icon: apple grey
