--- a/_data/home_links.yml
+++ b/_data/home_links.yml
@@ -208,9 +208,9 @@
       style: basic
       url: http://www.acfun.tv/
 
-    - name: 疯狂影视搜索
+    - name: 胖子视频
       style: basic
-      url: http://ifkdy.com/
+      url: http://www.pangzitv.com/
 
     - name: IKE.TV
       style: basic
