--- a/_data/program_links.yml
+++ b/_data/program_links.yml
@@ -6,6 +6,10 @@
       style: basic
       url: http://tool.oschina.net/
 
+    - name: Public API
+      style: basic
+      url: https://public-apis.xyz/
+
   - category: 教学
     links:
     - name: Linux device driver labs
