Update program links

--- a/_data/program_links.yml
+++ b/_data/program_links.yml
@@ -89,9 +89,8 @@
 
 - section: 3-line
 
-- section: security
   categories:
-  - category: ctf-Info
+  - category: security
     links:
     - name: ctf-wiki
       style: basic
