--- a/_data/home_links.yml
+++ b/_data/home_links.yml
@@ -28,6 +28,10 @@
       style: basic
       url: https://www.amazon.cn/
 
+    - name: 孔夫子旧书网
+      style: basic
+      url: http://www.kongfz.com/
+
     - name: PayPal
       style: basic
       rul: https://www.paypal.com/c2/webapps/mpp/home
