Update web links

--- a/_data/program_links.yml
+++ b/_data/program_links.yml
@@ -124,3 +124,10 @@
       style: basic
       url: http://www.yyyweb.com
 
+    - name: |
+      style: basic
+      url:
+
+    - name: 生产占位图片
+      style: basic
+      url: https://placem.at/
